# ai-prompt-manager

./: .dockerignore  .env.example  .env.translation.example  .flake8  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  FINAL_LINTING_REPORT.md  GITHUB_WORKFLOWS_SETUP.md  LICENSE  PRODUCT_OVERVIEW.md  README.md  README_MultiTenant.md  RELEASE_GUIDE.md  SECURITY_AUDIT_REPORT.md  api_endpoints.py  api_endpoints_enhanced.py  api_token_manager.py  auth_manager.py  bandit_final.json  bandit_remaining.json  bandit_results.json  clean_auth_tests.py  debug_gradio_app.py  debug_prompt_creation.py  debug_response.html  debug_server.py  docker-compose.prod.yml  docker-compose.yml  fix_auth_tests.py  flake8_output.txt  i18n.py  language_manager.py  langwatch_optimizer.py  modern_interface.py  mypy.ini  mypy_output.txt  prompt_api_endpoints.py  (+25 more)
.amazonq/rules/: Validating_File_Changes.md
.github/workflows/: build-package.yml  docker-image.yml  docker-publish.yml  release-legacy.yml  release.yml  test.yml
docs/: ADDING_MODELS.md  AI_SERVICES_REFACTOR_SUMMARY.md  API.md  API_AUTHORIZATION.md  API_EXAMPLES.md  API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEPLOYMENT_AUTOMATION.md  DEVELOPMENT.md  FEATURES.md  GITHUB_FORMAT.md  GITHUB_WORKFLOWS_SETUP.md  OPERATIONS.md  README.md  RELEASE_GUIDE.md  RELEASE_MANAGEMENT.md  RELEASE_PIPELINE_IMPROVEMENTS.md  RELEASE_SYSTEM_CONFIG.md  RULES_MANAGEMENT.md  SEMANTIC_VERSIONING_GUIDE.md  SPEECH_DICTATION_GUIDE.md  TESTING_GUIDE.md  TRUSTED_PUBLISHING_SETUP.md  USER_GUIDE.md
languages/: en.json
scripts/: create-release.sh  docker-test.py  docker-test.sh  test-docker-name.sh
src/: __init__.py
src/auth/: __init__.py
src/core/: __init__.py
src/projects/: __init__.py
src/prompts/: __init__.py
src/utils/: __init__.py  github_format.py  helpers.py  logging_config.py  validators.py
tests/: __init__.py
tests/e2e/: __init__.py  conftest.py  pytest_e2e_plugin.py  test_api_workflow.py  test_authentication_flow.py  test_deployment_scenarios.py  test_enhanced_ai_services_e2e.py  test_project_workflows_e2e.py  test_prompt_management_flow.py  test_release_system_e2e.py  test_rules_system_e2e.py  test_speech_dictation_e2e.py  test_tagging_system_e2e.py  test_web_ui_e2e.py
tests/integration/: simple_api_test.py  test_ai_database_integration.py  test_ai_services_api_integration.py  test_api_auth_fixes.py  test_api_integration.py  test_api_token_integration.py  test_azure_integration.py  test_github_format_integration.py  test_language_system_integration.py  test_mt_install.py  (+19 more)
(+79 files in other folders)
