[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ai-prompt-manager"
version = "0.1.0"
description = "AI Prompt Management System"
authors = [
    {name = "MakerCorn",email = "corn.mendoza@outlook.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "gradio (>=5.32.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
name = "ai-prompt-manager"
version = "0.1.0"
description = "AI Prompt Management System"
authors = ["MakerCorn <corn.mendoza@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "prompt_manager.py" }, { include = "prompt_data_manager.py" }]
