[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ai-prompt-manager"
version = "0.3.2"
description = "AI Prompt Management System"
authors = [
    {name = "MakerCorn",email = "corn.mendoza@outlook.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "gradio (>=5.32.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "cryptography (>=43.0.3,<44.0.0)",
    "fastapi (>=0.115.6,<1.0.0)",
    "uvicorn[standard] (>=0.34.0,<1.0.0)",
    "pydantic (>=2.10.3,<3.0.0)",
    "tiktoken (>=0.8.0,<1.0.0)"
]

[tool.poetry]
name = "ai-prompt-manager"
version = "0.2.0"
description = "AI Prompt Management System"
authors = ["MakerCorn <corn.mendoza@outlook.com>"]
license = "Non-Commercial"
readme = "README.md"
packages = [
    { include = "prompt_manager.py" }, 
    { include = "prompt_data_manager.py" },
    { include = "auth_manager.py" },
    { include = "api_token_manager.py" },
    { include = "api_endpoints.py" },
    { include = "langwatch_optimizer.py" },
    { include = "run.py" },
    { include = "token_calculator.py" }
]

[tool.poetry.dependencies]
gradio = ">=5.32.1,<6.0.0"
requests = ">=2.32.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
pyjwt = ">=2.10.1,<3.0.0"
cryptography = ">=43.0.3,<44.0.0"
fastapi = ">=0.115.6,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0,<1.0.0"}
pydantic = ">=2.10.3,<3.0.0"
tiktoken = ">=0.8.0,<1.0.0"
